--- a/mesa-selecta/index.html
+++ b/mesa-selecta/index.html
@@ -5,7 +5,7 @@
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css">
-    <title>Reservas restaurante</title>
+    <title>Mesa selecta</title>
   </head>
   <body>
     <div id="root"></div>
